<resources>
    <string name="app_name">AndroidVirtualJoystick</string>
    <string name="joystick_direction">Direction: %s</string>
    <string name="joystick_position">Position, x: %.2f y: %.2f</string>
    <string name="joystick_ndc_position">NDC Position, x: %.2f y: %.2f</string>
    <string name="joystick_direction_type">Direction type</string>
    <string name="joystick_primary_color">Primary color</string>
    <string name="joystick_accent_color">Accent color</string>
    <string name="joystick_drawer_type">Drawer type</string>
    <string name="joystick_bounded">Bounded</string>
    <string name="joystick_move_action">Start move action</string>
    <string name="joystick_magnitude">Magnitude: %.2f</string>
</resources>